fix: align ball and rackets positions to height

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 body {
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
   height: 100vh;
   overflow: hidden;
   background-color: rgb(113, 218, 218);
 }
-#pong {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-#start_btn {
+#start-btn {
   cursor: pointer;
   transition: all 0.2s ease;
 }
-#start_btn:hover {
+#start-btn:hover {
   fill: rgb(255, 217, 0);
 }
-#start_btn:active {
+#start-btn:active {
   fill: rgba(135, 255, 80, 0.7);
 }
 svg text {
@@ -32,5 +26,4 @@ svg text {
 }
 svg text::selection {
   background: none;
-  /* -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); */
 }
